--- a/AttenceProject/Views/Login/Index.cshtml
+++ b/AttenceProject/Views/Login/Index.cshtml
@@ -11,15 +11,13 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>后台登录</title>
-</head>
-
-<link rel="stylesheet" type="text/css" href="~/easyUI/easyUI/themes/default/easyui.css" />
-<link rel="stylesheet" type="text/css" href="~/easyUI/easyUI/themes/icon.css"/>
-<link rel="stylesheet" type="text/css" href="~/easyUI/easyUI/demo/demo.css"/>
-<script type="text/javascript" src="~/easyUI/easyUI/jquery.min.js"></script>
-<script type="text/javascript" src="~/easyUI/easyUI/jquery.easyui.min.js"></script>
-<script type="text/javascript">
-function login() {
+    <link rel="stylesheet" type="text/css" href="~/easyui/themes/default/easyui.css" />
+    <link rel="stylesheet" type="text/css" href="~/easyui/themes/icon.css" />
+    <link rel="stylesheet" type="text/css" href="~/easyui/demo/demo.css" />
+    <script type="text/javascript" src="~/easyui/jquery.min.js"></script>
+    <script type="text/javascript" src="~/easyui/jquery.easyui.min.js"></script>
+    <script type="text/javascript">
+        function login() {
 		//$("#area").val($("#areashow").combobox("getValue"));
 	  	 document.form1.submit();
 	}
@@ -31,7 +29,11 @@ $(function () {
     });
 });
 
-</script>
+    </script>
+</head>
+
+
+
 <body style="width:100%; height: 100% ; overflow: hidden;background:url();background-size:100% 100%">
     <div style="margin:200px auto;  width:609px; height: 258px ;background:url();">
 
